--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout CSS</title>
-    <link rel="shortcut icon" href="./img/lapd.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/fluidicon.png" type="image/x-icon">
 </head>
 <body>
     <div>  </div>
