--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="https://github.com/fluidicon.png" type="image/x-icon">
 </head>
 <body>
-    <div>  </div>
+    <div class="column-1" id="title"> 
+        <h1>CSS</h1>
+    </div>
 </body>
 </html>
